<resources>
    <string name="app_name">Space X</string>
    <string name="space">Space</string>
    <string name="ship">Ship</string>
    <string name="company">Company</string>
    <string name="welcome">Welcome To SpaceX</string>
    <string name="capsule">Capsule</string>
    <string name="dragons">Dragons</string>
    <string name="rocket">Rocket</string>
    <string name="crew">Crew</string>
    <string name="type">Type:</string>
    <string name="first_flight">First Flight :</string>
    <string name="massa_kg">Massa (Kg) :</string>
    <string name="description">Description :</string>
    <string name="companyy">Company :</string>
    <string name="country">Country :</string>
    <string name="status">Status :</string>
    <string name="agency">Agency :</string>
    <string name="wikipedia">Wikipedia :</string>
    <string name="launcher">Launcher</string>
</resources>